tests/ui/delegation/hir-crate-items-before-lowering-ices.ice_155202.stderr
error: function cannot return without recursing
  --> $DIR/hir-crate-items-before-lowering-ices.rs:67:22
   |
LL |         reuse Trait::bar {
   |                      ^^^
   |                      |
   |                      cannot return without recursing
   |                      recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
note: the lint level is defined here
  --> $DIR/hir-crate-items-before-lowering-ices.rs:61:8
   |
LL | #[deny(unconditional_recursion)]
   |        ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

